--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,6 @@
     <string name="tab_text_1">Overview</string>
     <string name="tab_text_2">Measurements</string>
     <string name="tab_text_3">Data</string>
-    <string name="add_random_measurement_unfinished">Add random measurement (unfinished)</string>
-    <string name="add_random_measurement_finished">Add random measurement (finished)</string>
     <string name="delete_all_measurements">Delete all measurements</string>
     <string name="tmp_name" translatable="false">Lorem Ipsum</string>
     <string name="tmp_street">Loremway 5</string>
@@ -58,8 +56,6 @@
     <string name="max_glucose">Max. glucose</string>
     <string name="average_glucose">Average glucose</string>
     <string name="analyses">Analyses</string>
-    <string name="rating">Rating</string>
-    <string name="personal_index">Personal Index</string>
     <string name="energy_kj">Energy (kJ)</string>
     <string name="fat">Fat</string>
     <string name="of_which_saturates">of which saturates</string>
@@ -90,9 +86,6 @@
     <string name="_90_minutes">… 90 minutes</string>
     <string name="_105_minutes">… 105 Minuten</string>
     <string name="_120_minutes">… 120 minutes</string>
-    <string name="add_coke_debug" translatable="false">Add Coke (Debug)</string>
-    <string name="add_pizza_debug">Add Pizza (Debug)</string>
-    <string name="add_apple_debug">Add Apple (Debug)</string>
     <string name="delete_all_foods">Delete all Foods</string>
     <string name="delete_food">Delete Food</string>
     <string name="time_min">Time (min)</string>
@@ -113,7 +106,6 @@
     <string name="median" translatable="false">Median</string>
     <string name="animate_graph">Animate Graph</string>
     <string name="draw_bar_graph">Draw Bar Graph</string>
-    <string name="integral" translatable="false">Integral</string>
     <string name="standard_deviation">Standard deviation</string>
     <string name="_24_06_2019" translatable="false">24.06.2019</string>
     <string name="_1235_ml" translatable="false">1235 ml</string>
@@ -122,23 +114,18 @@
     <string name="unrated">unrated</string>
     <string name="header_glucose_increase_max">Glucose increase max (mg/dl)</string>
     <string name="header_glucose_max">Glucose max peak (mg/dl)</string>
-    <string name="header_glucose_increase_average">Glucose increase average(mg/dl)</string>
     <string name="header_glucose_average">Glucose average (mg/dl)</string>
-    <string name="header_integral">Integral (area unit) </string>
     <string name="select_food">Select food</string>
     <string name="draw_line_graph_glucose_increase">Draw Line Graph (Glucose increase)</string>
     <string name="draw_line_graph_glucose_over_time">Draw line Graph (Glucose over time)</string>
     <string name="compare_values">Compare Values</string>
     <string name="glucose_increase_max">Glucose increase (max)</string>
-    <string name="glucose_increase_avg">Glucose increase (avg)</string>
     <string name="glucose_max">Glucose (max)</string>
     <string name="glucose_average">Glucose (average)</string>
     <string name="max_increase_glucose">Max increase glucose</string>
-    <string name="average_increase_glucose">Average increase glucose</string>
     <string name="draw_graph">Draw Graph</string>
     <string name="update_measurement">Update measurement</string>
     <string name="add_food">Add Food</string>
-    <string name="food_information">Food information</string>
     <string name="add_measurement">Add Measurement</string>
     <string name="edit_user_data">Edit User Data</string>
     <string name="edit_measurement">Edit measurement</string>
@@ -153,7 +140,6 @@
     <!-- Onboarding -->
     <string name="next">next</string>
 
-    <string name="onboarding_1_header">Welcome :)</string>
     <string name="onboarding_2_header">Manage user data</string>
     <string name="onboarding_3_header">Manage foods</string>
     <string name="onboarding_4_header">Manage measurements</string>
@@ -190,16 +176,11 @@
     to edit)</string>
     <string name="how_to_use_this_app">How to use this app</string>
     <string name="back">back</string>
-    <string name="_2_4" translatable="false">2/4</string>
     <string name="_1_3" translatable="false">1/3</string>
     <string name="done">done</string>
     <string name="_3_3" translatable="false">3/3</string>
     <string name="_2_3" translatable="false">2/3</string>
-    <string name="gi" translatable="false">GI</string>
     <string name="food">Food</string>
-    <string name="max_increase_glucose_overall">Max increase glucose (overall)</string>
-    <string name="add_random_gi_measurement_unfinished" translatable="false">Add random GI measurement (unfinished)</string>
-    <string name="add_random_gi_measurement_finished" translatable="false">Add random GI measurement (finished)</string>
     <string name="add_random_low_gi_measurement" translatable="false">Add random low GI measurement</string>
     <string name="add_random_mid_gi_measurement" translatable="false">Add random mid GI measurement</string>
     <string name="add_random_high_gi_measurement" translatable="false">Add random high GI measurement</string>
@@ -213,6 +194,19 @@
     <string name="sort_alphanumeric">Sort alphanumeric</string>
     <string name="sort_for_gi">Sort for GI</string>
     <string name="sort_for_glucose_max">Sort for glucose max</string>
+    <string name="fat_g">Fat (g)</string>
+    <string name="of_which_saturates_g">of which saturates (g)</string>
+    <string name="protein_g" translatable="false">Protein (g)</string>
+    <string name="of_which_sugars_g">of which sugars (g)</string>
+    <string name="carbohydrate_g">Carbohydrate (g)</string>
+    <string name="salt_g">Salt (g)</string>
+    <string name="glucose_max_mg_dl">Glucose max (mg/dl)</string>
+    <string name="glucose_avg_mg_dl">Glucose avg. (mg/dl)</string>
+    <string name="glucose_max_increase_mg_dl">Glucose max. increase (mg/dl)</string>
+    <string name="age_years">Age (years)</string>
+    <string name="height_cm">Height (cm)</string>
+    <string name="weight_kg">Weight (kg)</string>
+    <string name="gi">GI</string>
 
     <string-array name="type">
         <item>Grains</item>
