--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,7 @@
     <string name="_60_minutes">… 60 minutes</string>
     <string name="_75_minutes">… 75 minutes</string>
     <string name="_90_minutes">… 90 minutes</string>
-    <string name="_105_minutes">… 105 Minuten</string>
+    <string name="_105_minutes">… 105 minutes</string>
     <string name="_120_minutes">… 120 minutes</string>
     <string name="delete_all_foods">Delete all Foods</string>
     <string name="delete_food">Delete Food</string>
